--- a/todo.html
+++ b/todo.html
@@ -1,24 +1,112 @@
-<input id="input">
-<button onclick="add()">Add</button>
-<ul id="list-container">
-  <li>
-    Hello
-    <button onclick="deleteItem(event)">Delete</button>
-  </li>
-  
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Todo List</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color:lightblue;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
 
-<script>
-  var ul=document.getElementById("list-container")
-  var input=document.getElementById("input")
-   function add()
-   {
-     var listitem = document.createElement("li")
-     listitem.innerHTML=input.value+"<button onclick='deleteItem(event)'>Delete</button>"
-     ul.append(listitem)
-   }
+    .container {
+      background-color: white;
+      padding: 50px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      width: 500px;
+      text-align: center;
+    }
 
-   function deleteItem(event){
-      event.target.parentElement. remove()
-   }
-</script>
+    h1 {
+      margin-bottom: 20px;
+      color: #333;
+    }
+
+    #input {
+      width: 70%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      margin-right: 10px;
+    }
+
+    button {
+      padding: 10px 15px;
+      border: none;
+      background-color: #28a745;
+      color: white;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #218838;
+    }
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+      margin-top: 20px;
+    }
+
+    li {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: #f8f9fa;
+      margin: 10px 0;
+      padding: 10px;
+      border-radius: 4px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    li button {
+      background-color: #dc3545;
+    }
+
+    li button:hover {
+      background-color: #c82333;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Todo List</h1>
+    <input id="input" placeholder="Add a new task">
+    <button onclick="add()">Add</button>
+    <ul id="list-container">
+      <li>
+        Hello
+        <button onclick="deleteItem(event)">Delete</button>
+      </li>
+    </ul>
+  </div>
+
+  <script>
+    var ul = document.getElementById("list-container");
+    var input = document.getElementById("input");
+
+    function add() {
+      if (input.value.trim() !== "") {
+        var listitem = document.createElement("li");
+        listitem.innerHTML = input.value + "<button onclick='deleteItem(event)'>Delete</button>";
+        ul.append(listitem);
+        input.value = ""; // Clear the input after adding
+      } else {
+        alert("Please enter a task!");
+      }
+    }
+
+    function deleteItem(event) {
+      event.target.parentElement.remove();
+    }
+  </script>
+</body>
+</html>
