changes in todo.html

--- a/todo.html
+++ b/todo.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color:lightblue;
+      background-color:burlywood;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -16,9 +16,9 @@
     }
 
     .container {
-      background-color: white;
+      background-color:wheat;
       padding: 50px;
-      border-radius: 8px;
+      border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       width: 500px;
       text-align: center;
@@ -83,7 +83,7 @@
     <button onclick="add()">Add</button>
     <ul id="list-container">
       <li>
-        Hello
+        //add your tasks
         <button onclick="deleteItem(event)">Delete</button>
       </li>
     </ul>
